# Data-Pipeline-with-dbt-using-Airflow-on-GCP

./: .gitignore  pyproject.toml
include/dbt/: dbt_project.yml  profiles.yml
include/dbt/models/sources/: sources.yml
include/dbt/models/transform/: dim_datetime.sql
include/soda/: configuration.yml
include/soda/checks/sources/: raw_online_retail.yml
