[tool.poetry]
name = "data-pipeline-with-dbt-using-airflow-on-gcp"
version = "0.1.0"
description = ""
authors = ["me"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11 <3.12"
dbt-bigquery = "^1.8.2"
soda-core-bigquery = "^3.3.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
